<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_item_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:title="@string/menu_item_caidat"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/menu_item_trogiup"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/menu_item_gioithieu"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/menu_item_dangxuat"
        app:showAsAction="never" />

</menu>